--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -293,15 +293,42 @@ i {
 
   /* margin-top: 100%; */
 }
-/* .num {
-  position: absolute;
-} */
+/* ------------------------------------------ */
+.rem {
+  display: block;
+  color: #d35400;
+  font-family: Arial, Helvetica, sans-serif;
+
+  /* font-weight: 700; */
+  border-bottom: 2px solid #d35400;
+  /* border-top: 2px solid black; */
+  /* padding: 0 -150%; */
+  margin-left: 800px;
+  margin-right: 220px;
+  border-radius: 50px;
+  text-align: center;
+  /* width: 2px; */
+  /* text-align: center; */
+  /* margin-bottom: -50px; */
+}
+.sigh {
+  font-style: italic;
+  font-weight: bolder;
+  color: red;
+  border-bottom: 2px solid #d35400;
+}
+/* ------------------------------------------- */
+.num {
+  display: none;
+}
+/* top: 400px; */
+
 .work-steps {
   margin-bottom: 50px;
   /* background-color: #555; */
-  padding-top: 50px;
+  padding-top: -2px;
 
-  /* margin-top: 500px; */
+  /* margin-top: 25px; */
   text-align: center;
 }
 .work-steps div {
@@ -687,4 +714,55 @@ select {
   color: #d35400;
 
   /* border: 3px solid #d35400; */
+}
+/* border: 3px solid #d35400; */
+
+.foot {
+  /* margin-top: 5%; */
+  padding-bottom: 2%;
+  background-color: black;
+}
+.footer-list {
+  list-style: none;
+  margin-right: 20%;
+}
+.footer-list li {
+  margin-right: 5%;
+
+  float: left;
+  font-size: 80%;
+}
+.footer-list a {
+  font-weight: 700;
+  color: red;
+  text-decoration: none;
+  font-size: 120%;
+}
+/* -------------------------------------------- */
+.social-icons {
+  list-style: none;
+
+  margin-left: 50%;
+  /* text-align: right; */
+}
+
+.social-icons li {
+  float: left;
+  margin-right: 15%;
+  font-size: 50%;
+  /* margin-left: -10%; */
+}
+.social-icons a {
+  font-size: 90%;
+  /* color: orange; */
+}
+
+/* --------------------------------------------------- */
+.cr {
+  color: rgb(231, 228, 228);
+  margin-top: 3%;
+  text-align: center;
+  font-size: 80%;
+  margin-left: 6%;
+  word-spacing: 2px;
 }
