--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -1,5 +1,13 @@
 /* ---big tabs ------ */
 @media only screen and (width-size: 1200px) {
+  .hero-text-box {
+    width: 100%;
+    padding: 0 2%;
+  }
+  .mh {
+    width: 100%;
+    padding: 0 2%;
+  }
 }
 
 /* ==========for big tabs in portrait mode */
@@ -13,4 +21,12 @@
 /* -----------MOBILE--------------- */
 
 @media only screen and (max-width: 480px) {
+  .hero-text-box {
+    width: 100%;
+    padding: 0 2%;
+  }
+  .mh {
+    width: 100%;
+    padding: 0 2%;
+  }
 }
