--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -26,7 +26,7 @@ header {
 }
 .hero-text-box {
   position: absolute;
-  width: 1140px;
+  /* width: 1140px; */
   top: 37%;
   left: 5%;
   font-weight: lighter;
